--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,10 @@ img {
   max-width: 100%;
 }
 
+hr {
+  border: 1px solid rgba(21, 20, 57, 0.4);
+}
+
 .pointer {
   cursor: pointer;
 }
@@ -225,6 +229,9 @@ img {
     flex-grow: 0;
     width: 100%;
   }
+  .container {
+    flex-direction: column;
+  }
 }
 @media (min-width: 480px) {
   .col-1-sm {
@@ -286,6 +293,9 @@ img {
     box-sizing: border-box;
     flex-grow: 0;
     width: 100%;
+  }
+  .container {
+    flex-direction: column;
   }
 }
 @media (min-width: 720px) {
@@ -349,6 +359,9 @@ img {
     flex-grow: 0;
     width: 100%;
   }
+  .container {
+    flex-direction: column;
+  }
 }
 @media (min-width: 960px) {
   .col-1-lg {
@@ -410,6 +423,9 @@ img {
     box-sizing: border-box;
     flex-grow: 0;
     width: 100%;
+  }
+  .container {
+    flex-direction: row;
   }
 }
 @media (min-width: 1200px) {
@@ -473,6 +489,9 @@ img {
     flex-grow: 0;
     width: 100%;
   }
+  .container {
+    flex-direction: row;
+  }
 }
 .row {
   display: flex;
@@ -495,7 +514,7 @@ img {
   text-align: center;
 }
 
-.navbar, .navbar-key {
+.navbar, .navbar-white, .navbar-black, .navbar-yt, .navbar-fb, .navbar-tw, .navbar-error, .navbar-info, .navbar-tertiary, .navbar-secondary, .navbar-primary {
   width: 100%;
   display: flex;
   align-items: center;
@@ -503,48 +522,48 @@ img {
   box-sizing: border-box;
 }
 
-.navbar, .navbar-key {
+.navbar, .navbar-white, .navbar-black, .navbar-yt, .navbar-fb, .navbar-tw, .navbar-error, .navbar-info, .navbar-tertiary, .navbar-secondary, .navbar-primary {
   padding: 0.75rem 1.5rem;
-  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.7);
 }
 
-.navbar-key {
+.navbar-primary {
   background: #1e0e62;
 }
 
-.navbar-key {
+.navbar-secondary {
   background: #482be7;
 }
 
-.navbar-key {
+.navbar-tertiary {
   background: rgba(21, 20, 57, 0.4);
 }
 
-.navbar-key {
+.navbar-info {
   background: #f6c31c;
 }
 
-.navbar-key {
+.navbar-error {
   background: #d32752;
 }
 
-.navbar-key {
+.navbar-tw {
   background: #1da1f2;
 }
 
-.navbar-key {
+.navbar-fb {
   background: #1877f2;
 }
 
-.navbar-key {
+.navbar-yt {
   background: #ff0000;
 }
 
-.navbar-key {
+.navbar-black {
   background: #000000;
 }
 
-.navbar-key {
+.navbar-white {
   background: #ffffff;
 }
 
