--- a/scss-files/_grid.scss
+++ b/scss-files/_grid.scss
@@ -67,6 +67,13 @@ $grid-columns: 12;
       width: math.div($i * 100%, $grid-columns);
     }
   }
+
+  
+  
+  .container {
+    flex-direction: column;
+  }
+ 
 }
 
 @include sm {
@@ -77,6 +84,13 @@ $grid-columns: 12;
       width: math.div($i * 100%, $grid-columns);
     }
   }
+
+  .container {
+    flex-direction: column;
+  }
+
+
+ 
 }
 
 @include md {
@@ -87,6 +101,13 @@ $grid-columns: 12;
       width: math.div($i * 100%, $grid-columns);
     }
   }
+
+  .container {
+    flex-direction: column;
+  }
+
+
+ 
 }
 
 @include lg {
@@ -95,8 +116,17 @@ $grid-columns: 12;
       box-sizing: border-box;
       flex-grow: 0;
       width: math.div($i * 100%, $grid-columns);
+
+      
     }
   }
+
+  .container {
+    flex-direction: row;
+  }
+
+
+ 
 }
 
 @include xl {
@@ -107,6 +137,12 @@ $grid-columns: 12;
       width: math.div($i * 100%, $grid-columns);
     }
   }
+
+  .container {
+    flex-direction: row;
+  }
+
+ 
 }
 
 //base layout classes
