add the outline hue // card.scss

--- a/scss-files/_colors.scss
+++ b/scss-files/_colors.scss
@@ -31,6 +31,25 @@
       .bg-#{$key}-light-#{$i} {
         background-color: mix(white, $val, $i * 10);
       }
+      //Button Lightness
+      .btn-#{$key}-light-#{$i} {
+        @include btn;
+        background-color: mix(white, $val, $i * 10);
+
+        &:hover {
+          background-color: lighten($val, 10%);
+        }
+      }
+      //Button Outlined Lightness
+      .btn-outlined-#{$key}-light-#{$i} {
+        @include btn($key);
+        border: 1px solid $val;
+
+        &:hover {
+          background-color: mix(white, $val, $i * 10);
+          border-color: mix(white, $val, $i * 10);
+        }
+      }
     }
 
     @for $i from 1 through 9 {
@@ -47,6 +66,27 @@
 
       .bg-#{$key}-dark-#{$i} {
         background-color: mix(black, $val, $i * 10);
+      }
+      //Button Darkness
+      .btn-#{$key}-dark-#{$i} {
+        @include btn;
+        color: $white;
+        background-color: mix(black, $val, $i * 10);
+
+        &:hover {
+          background-color: darken($val, 10%);
+        }
+      }
+      //Button Outlined Darkness
+      .btn-outlined-#{$key}-dark-#{$i} {
+        @include btn($key);
+        border: 1px solid $val;
+
+        &:hover {
+          background-color: mix(black, $val, $i * 10);
+          border-color: mix(black, $val, $i * 10);
+          color: $white;
+        }
       }
     }
   }
