--- a/scss-files/_typography.scss
+++ b/scss-files/_typography.scss
@@ -1,6 +1,6 @@
 //font-size
 $base-font-size: 1rem;
-$font-size-xsm: $base-font-size * 0.5;
+$font-size-xs: $base-font-size * 0.5;
 $font-size-sm: $base-font-size * 1;
 $font-size-md: $base-font-size * 1.5;
 $font-size-lg: $base-font-size * 2;
