--- a/scss-files/_variables.scss
+++ b/scss-files/_variables.scss
@@ -35,5 +35,5 @@ $base-box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.7);
 
 //border
 $base-border-radius: 20px;
-$base-border-thickness: 3;
+$base-border-thickness: 1px;
 $base-border-styles: solid, dashed, dotted;
