--- a/scss-files/index.scss
+++ b/scss-files/index.scss
@@ -12,6 +12,8 @@
 //components :)
 @import "components/navbar";
 @import "components/buttons";
+@import "components/card";
+
 //colors
 @import "colors";
 //utilities
