--- a/scss-files/_utilities.scss
+++ b/scss-files/_utilities.scss
@@ -118,7 +118,7 @@ $utilities: (
   "font-size": (
     "prefix": "font",
     "values": (
-      "xsm": $font-size-xsm,
+      "xs": $font-size-xs,
       "sm": $font-size-sm,
       "md": $font-size-md,
       "lg": $font-size-lg,
@@ -224,7 +224,7 @@ $utilities: (
 }
 
 //border
-@for $i from 1 through $base-border-thickness {
+@for $i from 1 through 3 {
   @each $key, $value in $colors {
     @each $valueStyles in $base-border-styles {
       .border-#{$i}-#{$valueStyles}-#{$key} {
