--- a/scss-files/_utilities.scss
+++ b/scss-files/_utilities.scss
@@ -149,8 +149,11 @@ $utilities: (
   "max-width": (
     "prefix": "mx-width",
     "values": (
+      "300": 300px,
       "480": 480px,
+      "650": 650px,
       "768": 768px,
+      "840": 840px,
       "1024": 1024px,
       "1200": 1200px,
     ),
