--- a/scss-files/index.scss
+++ b/scss-files/index.scss
@@ -13,7 +13,8 @@
 @import "components/navbar";
 @import "components/buttons";
 @import "components/card";
-
+@import "components/header";
+@import "components/footer";
 //colors
 @import "colors";
 //utilities
