--- a/scss-files/components/_card.scss
+++ b/scss-files/components/_card.scss
@@ -5,7 +5,7 @@
   box-shadow: $base-box-shadow;
 
   &__title {
-    font-size: $font-size-lg;
+    font-size: $font-size-md;
     padding-bottom: $base-padding;
   }
 
