--- a/scss-files/index.scss
+++ b/scss-files/index.scss
@@ -15,7 +15,10 @@
 @import "components/card";
 @import "components/header";
 @import "components/footer";
+@import "components/main";
+
 //colors
 @import "colors";
+
 //utilities
 @import "utilities";
