--- a/scss-files/_typography.scss
+++ b/scss-files/_typography.scss
@@ -21,6 +21,9 @@ $base-letter-space: 1px;
 //line-height
 $base-line-height: 10;
 
+//text-decoration
+$text-decor-values: overline, line-through, underline;
+
 //text-align
 .text-center {
   text-align: center;
