finish the navs //

--- a/scss-files/index.scss
+++ b/scss-files/index.scss
@@ -16,6 +16,7 @@
 @import "components/header";
 @import "components/footer";
 @import "components/main";
+@import "components/switch";
 
 //colors
 @import "colors";
