--- a/scss-files/_utilities.scss
+++ b/scss-files/_utilities.scss
@@ -149,6 +149,9 @@ $utilities: (
   "max-width": (
     "prefix": "mx-width",
     "values": (
+      "200": 200px,
+      "230": 230px,
+      "250": 250px,
       "300": 300px,
       "480": 480px,
       "650": 650px,
