--- a/scss-files/index.scss
+++ b/scss-files/index.scss
@@ -17,7 +17,9 @@
 @import "components/footer";
 @import "components/main";
 @import "components/switch";
-
+@import "components/borders";
+//pages
+@import "pages/tour";
 //colors
 @import "colors";
 
