--- a/css/index.css
+++ b/css/index.css
@@ -3300,17 +3300,35 @@ input:checked + .slider:before {
 
 .content {
   position: absolute;
-  background-color: orangered;
+  background: none;
+  color: #fff;
+  margin: 0;
+  padding: 24px 36px 30px;
   padding: 20px;
   left: 50px;
   top: 200px;
-  display: none;
+  transition: 0.7s linear;
+}
+.content button {
+  background-color: orangered;
+  border: none;
+  padding: 8px 10px;
 }
 
-.content.expanded {
-  display: block;
+.content.animate {
+  animation-name: anim;
+  animation-duration: 5s;
+  animation-fill-mode: both;
 }
 
+@keyframes anim {
+  from {
+    transform: translateX(5px);
+  }
+  to {
+    transform: translateX(30px);
+  }
+}
 .tour-img {
   display: block;
   height: 200px;
